# breasts-pressure-modelisation

./: .gitignore  apple_crossovers.npy  apple_points_12_12.npy  boob_grid_12_21.npy  cart.csv  live-rpi.py  live.py  live_test.py  map_points.ipynb  noise_test.py  pyvista_demo.py  render.ipynb  render.py  rpi.py  start.sh  test.py  test_vtk.py
analysis/: basic.ipynb  binary_to_csv.py  heatmap.ipynb  single.ipynb
assets/: boob.stl
breasties_2/: CONTRIBUTING.rst  MANIFEST.in  setup.cfg
breasties_2/breasties_2/app/: core.py
breasties_2/bundles/desktop/: create_linux.sh
breasties_2/bundles/docker/: README.md
breasties_2/bundles/docker/scripts/: run_image.sh
breasties_2/bundles/docker/setup/: apps.yml
breasties_2/examples/jupyter/: show.ipynb
breasties_2/vue-components/: package-lock.json
legacy/: raw-vtk.py
legacy/breasties_2/: LICENSE  README.rst
legacy/breasties_2/bundles/desktop/: README.md  create_exe.bat  create_mac.sh  run.py
legacy/breasties_2/bundles/docker/scripts/: build_image.sh
legacy/breasties_2/bundles/docker/setup/: requirements.txt
legacy/breasties_2/vue-components/: package.json  vite.config.js
legacy/rpi/: Dockerfile
rpi/: main.py
rpi/assets/: boob.pcd
